Small edits to prevent overflow.

--- a/css/custom.css
+++ b/css/custom.css
@@ -112,7 +112,8 @@
   width: 70%;
   margin-left: 15%;
   margin-right: 15%;
-  line-height: 1.2em;
+  line-height: 1.4em;
+  font-size: 1.2em;
 }
 
 #cover-heading {
